# uk-gov-case-scraper

./: .env.example  .gitignore  cases_export_20250806_182734.xlsx  db.sqlite3  main.py  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 3ac3164f268f_case_table_added.py  433f7fb61b10_create_cases_table.py
case/: __init__.py  case_details_scraper.py  case_id_scraper.py
controller/: __init__.py  get_scrapers.py  run_scraper.py
dbcore/: __init__.py  config.py  create.py  database.py  get.py  models.py  session.py  update.py
selenium_webdriver/: README.md  __init__.py  chrome_driver.py
