[project]
name = "uk-gov-case-scraper"
version = "0.1.0"
description = "uk-gov-case-scraper is an automated web scraping tool designed to collect and store legal case information from official UK government websites. Built with Python 3.11+, the project utilizes Selenium for dynamic content extraction, BeautifulSoup for HTML parsing, and SQLAlchemy with PostgreSQL for structured data storage. This scraper is ideal for legal researchers, data analysts, or developers building applications that require real-time access to UK legal case data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "beautifulsoup4>=4.13.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.42",
]
