[project]
name = "uk-gov-case-scraper"
version = "0.1.0"
description = "A Python-based web scraper that extracts legal case data from UK government websites. Uses Selenium and BeautifulSoup for scraping, SQLAlchemy and PostgreSQL for storage, and dotenv for environment management. Ideal for legal research, data analysis, and automating case data collection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.1",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.42",
]
